8241062: Shenandoah: rich asserts trigger "empty statement" inspection

Reviewed-by: shade